# MRTCoreEx

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
libmrm/: CMakeLists.txt
libmrm/include/mrm/common/: Base.h  MrmTraceLogging.h  Platform.h  PlatformWin32.h
libmrm/include/mrm/platform/: MrmWnfHelpers.h
libmrm/mrmex/: CMakeLists.txt
libmrm/mrmmin/: BaseProviders.cpp  CMakeLists.txt  MrmTraceLogging.cpp  MrmWnf.cpp  Platform.cpp
wil/: CMakeLists.txt
windows_sdk/: CMakeLists.txt
windows_sdk/include/: _mingw.h  functions.h  guiddef.h  intsafe.h  sal.h  specstrings.h  strsafe.h  wil_resources.h  windows.h  winerror.h  wtypes.h  wtypesbase.h
windows_sdk/include/wil/: common.h  errors.h  resource.h
